bug fixed: liner and image distortion

--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -87,8 +87,7 @@
 
 
 .skill-logo {
-  height: 50px;
-  width: 50px;
+  font-size: 3rem;
 }
 
 
